--- a/explorer-ui/src/index.css
+++ b/explorer-ui/src/index.css
@@ -1,3 +1,10 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components {
+  /* Skeleton loader */
+  .skeleton {
+    @apply bg-gray-200;
+  }
+}
