--- a/explorer-ui/src/index.css
+++ b/explorer-ui/src/index.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@200;300;400&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -6,5 +8,9 @@
   /* Skeleton loader */
   .skeleton {
     @apply bg-gray-200;
+  }
+
+  .link {
+    @apply text-blue-800;
   }
 }
