code block for event data

--- a/explorer-ui/src/index.css
+++ b/explorer-ui/src/index.css
@@ -51,6 +51,10 @@
   .tag.wasm {
     @apply text-lime-600 bg-lime-200
   }
+
+  .code {
+    @apply bg-gray-100 text-gray-800 border border-gray-200 rounded-md px-3 py-2 shadow-inner font-mono break-words overflow-y-auto max-h-20
+  }
 }
 
 /* Fixes */
