--- a/explorer-ui/src/index.css
+++ b/explorer-ui/src/index.css
@@ -57,7 +57,7 @@
   }
 
   .input {
-    @apply appearance-none block py-2 px-3 text-sm text-gray-900 border border-gray-200 focus:outline-none focus:ring-2 focus:ring-blue-200 focus:border-blue-400
+    @apply appearance-none block py-2 px-3 text-sm text-gray-900 border border-gray-200 focus:outline-none focus:border-blue-400
   }
 
   .select {
