--- a/explorer-ui/src/index.css
+++ b/explorer-ui/src/index.css
@@ -60,16 +60,16 @@
     @apply appearance-none block py-2 px-3 text-sm text-gray-900 border border-gray-200 focus:outline-none focus:border-blue-400
   }
 
-  .select {
-    @apply appearance-none block py-2 px-3 text-sm text-gray-900 border border-gray-200 focus:outline-none
+  .select.inline {
+    @apply appearance-none block text-sm text-gray-900 focus:outline-none
   }
 
   .select-option.active {
-    @apply bg-blue-100 text-blue-900
+    @apply bg-gray-100 text-gray-900
   }
 
   .select-option .selected {
-    @apply text-blue-600
+    @apply text-gray-500
   }
 
   .btn {
