a little bit of theming

--- a/explorer-ui/src/index.css
+++ b/explorer-ui/src/index.css
@@ -4,6 +4,7 @@
 
 @import "tailwindcss/components";
 @import "./style/components.css";
+@import "./style/themes";
 
 @import "tailwindcss/utilities";
 
