minor style tweaks

--- a/explorer-ui/src/style/themes/candy.css
+++ b/explorer-ui/src/style/themes/candy.css
@@ -18,7 +18,7 @@
     }
 
     .header {
-      @apply border-b border-white border-opacity-30;
+      @apply border-b border-gray-300 bg-white;
     }
   }
 }
