add sections comments and optimize for legibility

--- a/explorer-ui/src/style/fixes.css
+++ b/explorer-ui/src/style/fixes.css
@@ -1,6 +1,7 @@
 /* Fixes */
-* {
-  text-rendering: geometricPrecision;
+body {
+  text-rendering: optimizeLegibility;
+  min-height: 100vh;
 }
 
 .ui--IdentityIcon {
