--- a/explorer-ui/src/style/components.css
+++ b/explorer-ui/src/style/components.css
@@ -13,6 +13,16 @@
     @apply bg-gradient-to-r from-neutral-100 to-white;
   }
 
+  /* General */
+  .content {
+    @apply my-2 md:my-5;
+  }
+
+  .text-light {
+    @apply text-gray-400;
+  }
+
+  /* Backgrounds */
   .bg-page {
     @apply bg-zinc-100;
   }
@@ -25,6 +35,7 @@
     @apply bg-gray-50 bg-opacity-50;
   }
 
+  /* Links */
   .link {
     @apply text-sky-600 hover:text-sky-700;
   }
@@ -41,10 +52,7 @@
     @apply text-gray-400 text-opacity-70;
   }
 
-  .content {
-    @apply my-2 md:my-5;
-  }
-
+  /* Tabs */
   .tab {
     @apply inline-flex p-4 rounded-t-lg border-b-2 border-transparent hover:text-gray-600 hover:border-gray-300;
   }
@@ -53,6 +61,7 @@
     @apply text-blue-600 border-blue-600;
   }
 
+  /* Tags */
   .tag.instantiate {
     @apply border border-amber-300 bg-amber-100 text-amber-600;
   }
@@ -77,6 +86,7 @@
     @apply text-lime-600 bg-lime-200
   }
 
+  /* Forms & Controls */ 
   .input {
     @apply appearance-none block py-3 px-4 text-sm text-gray-900 border border-gray-200 focus:outline-none focus:border-blue-400
   }
@@ -93,6 +103,11 @@
     @apply text-gray-500
   }
 
+  .search {
+    @apply text-gray-400;
+  }
+
+  /* Buttons */
   .btn {
     @apply py-2 px-4
   }
@@ -103,13 +118,5 @@
 
   .btn.btn-secondary {
     @apply text-sky-600 hover:text-sky-700 focus:outline-none
-  }
-
-  .text-light {
-    @apply text-gray-400;
-  }
-
-  .search {
-    @apply text-gray-400;
   }
 }
